[package]
name = "rrt_star_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rrt_star_lib"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.20"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
rand = "0.8"
nalgebra = "0.32"
rstar = "0.11"
id_tree = "1.8"
approx = "0.5"
num = "0.4"
geo = { version = "0.26", features = ["use-serde"] }
rand_chacha = "0.3.1"
plotters = "0.3.4"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[profile.test]
opt-level = 0
