[project]
name = "rrt_star_lib"
version = "2.0.0"
authors = [
    { name = "Trym Tengesdal", email = "tengesdal1994@gmail.com" }
]
description = "Rust library containing multiple Rapidly-exploring Random Tree variants for trajectory planning and behavior generation that were compared in A Comparative Study of Rapidly-exploring Random Tree Algorithms Applied to Ship Trajectory Planning and Behavior Generation"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "maturin>=1.10.2",
    "numpy>=2.2.6",
    "shapely>=2.1.2",
]

[dependency-groups]
test = [
    "colav_simulator>=1.0.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "**/*.rs"}]
# Uncomment to build rust code in development mode
# config-settings = { build-args = '--profile=dev' }

[tool.uv.sources]
colav_simulator = { git = "https://github.com/NTNU-TTO/colav-simulator.git", rev = "b9816bda5e2fb48a64721a9b3979b437dacfacaa" }

[tool.maturin]
features = ["pyo3/extension-module"]
